// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders on a screen 1`] = `
<svg
  className="spinner size-default"
  fill="none"
  viewBox="0 0 100 100"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    clipRule="evenodd"
    cx="50"
    cy="50"
    fillRule="evenodd"
    r="44"
    stroke="black"
    strokeDasharray="283"
    strokeDashoffset="75"
    strokeLinecap="round"
    strokeWidth="12"
  />
</svg>
`;

exports[`Spinner renders with provided default size 1`] = `
<svg
  className="spinner size-default"
  fill="none"
  viewBox="0 0 100 100"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    clipRule="evenodd"
    cx="50"
    cy="50"
    fillRule="evenodd"
    r="44"
    stroke="black"
    strokeDasharray="283"
    strokeDashoffset="75"
    strokeLinecap="round"
    strokeWidth="12"
  />
</svg>
`;

exports[`Spinner renders with provided large size 1`] = `
<svg
  className="spinner size-large"
  fill="none"
  viewBox="0 0 100 100"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    clipRule="evenodd"
    cx="50"
    cy="50"
    fillRule="evenodd"
    r="44"
    stroke="black"
    strokeDasharray="283"
    strokeDashoffset="75"
    strokeLinecap="round"
    strokeWidth="12"
  />
</svg>
`;

exports[`Spinner renders with provided small size 1`] = `
<svg
  className="spinner size-small"
  fill="none"
  viewBox="0 0 100 100"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    clipRule="evenodd"
    cx="50"
    cy="50"
    fillRule="evenodd"
    r="44"
    stroke="black"
    strokeDasharray="283"
    strokeDashoffset="75"
    strokeLinecap="round"
    strokeWidth="12"
  />
</svg>
`;
